exports[`Reducers::Touch fetchedHours action matches the snapshot 1`] = `
Object {
  "date": "",
  "hours": Object {},
  "is_fetching_hours": false,
  "is_fetching_restart_kiosk": false,
  "is_fetching_slides": false,
  "is_fetching_todays_hours": false,
  "maps": Array [],
  "show_nav": true,
  "todays_hours": Object {},
}
`;

exports[`Reducers::Touch fetchedSlides action matches the snapshot 1`] = `
Object {
  "date": "",
  "hours": Object {},
  "is_fetching_hours": false,
  "is_fetching_restart_kiosk": false,
  "is_fetching_slides": false,
  "is_fetching_todays_hours": false,
  "maps": Array [],
  "show_nav": true,
  "todays_hours": Object {},
}
`;

exports[`Reducers::Touch fetchingHours action matches the snapshot 1`] = `
Object {
  "date": "",
  "hours": Object {},
  "is_fetching_hours": true,
  "is_fetching_restart_kiosk": false,
  "is_fetching_slides": false,
  "is_fetching_todays_hours": false,
  "maps": Array [],
  "show_nav": true,
  "todays_hours": Object {},
}
`;

exports[`Reducers::Touch fetchingSlides action matches the snapshot 1`] = `
Object {
  "date": "",
  "hours": Object {},
  "is_fetching_hours": false,
  "is_fetching_restart_kiosk": false,
  "is_fetching_slides": true,
  "is_fetching_todays_hours": false,
  "maps": Array [],
  "show_nav": true,
  "todays_hours": Object {},
}
`;

exports[`Reducers::Touch matches the snapshot 1`] = `[Function]`;

exports[`Reducers::Touch setHours action matches the snapshot 1`] = `
Object {
  "date": "",
  "hours": Object {
    "2000-01-01": Object {
      "close": "2am",
      "open": "1am",
      "sortable_date": "2000-01-01",
      "string_date": "Jan 01, 2000",
    },
  },
  "is_fetching_hours": false,
  "is_fetching_restart_kiosk": false,
  "is_fetching_slides": false,
  "is_fetching_todays_hours": false,
  "maps": Array [],
  "show_nav": true,
  "todays_hours": Object {},
}
`;

exports[`Reducers::Touch setMaps action matches the snapshot 1`] = `
Object {
  "date": "",
  "hours": Object {},
  "is_fetching_hours": false,
  "is_fetching_restart_kiosk": false,
  "is_fetching_slides": false,
  "is_fetching_todays_hours": false,
  "maps": Object {
    "image_url": "/assets/images/FloorMaps/floor_0.png",
    "title": "Floor 1",
  },
  "show_nav": true,
  "todays_hours": Object {},
}
`;
